# voxel-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  multithreading-chat.html
.github/agents/: cpp-bad-practice-reviewer.agent.md
claude_files/: MeshWorker.hpp  Renderer.hpp  Thread.hpp  ThreadPool.hpp  VoxelEngine.hpp  main.cpp
include/: chunk.hpp  engine.hpp  heightmap.hpp  player.hpp  shader.hpp  texture.hpp  thread_pool.hpp  world.hpp
include/glad/: glad.h
include/simplex_noise/: simplex.h
shaders/: shader.fs  shader.vs
src/: chunk.cpp  engine.cpp  glad.c  heightmap.cpp  main.cpp  player.cpp  shader.cpp  texture.cpp  thread_pool.cpp  world.cpp
